--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,6 @@ monitor_filters = esp32_exception_decoder
 lib_deps = 
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	teckel12/NewPing@^1.9.7
+	siteswapjuggler/Ramp@^0.6.2
+upload_protocol = espota
+upload_port = 192.168.178.94
