--- a/platformio.ini
+++ b/platformio.ini
@@ -19,5 +19,5 @@ lib_deps =
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	teckel12/NewPing@^1.9.7
 	siteswapjuggler/Ramp@^0.6.2
-upload_protocol = espota
-upload_port = 192.168.4.1
+;upload_protocol = espota
+;upload_port = 192.168.4.1
